...
                  styles.attachMenuItemText,
                  !modelSupportsVision
                    ? styles.attachMenuItemTextDisabled
                    : null,
                ]}
              >
                Camera
              </Text>
            </TouchableOpacity>
            <View style={styles.attachMenuDivider} />
            <TouchableOpacity
              style={[
                styles.attachMenuItem,
...
                  styles.attachMenuItemText,
                  !modelSupportsVision
                    ? styles.attachMenuItemTextDisabled
                    : null,
                ]}
              >
                Photo Library
              </Text>
            </TouchableOpacity>
            <View style={styles.attachMenuDivider} />
            <TouchableOpacity
              style={[
                styles.attachMenuItem,
...
                  styles.attachMenuItemText,
                  isFileAttachmentDisabled
                    ? styles.attachMenuItemTextDisabled
                    : null,
                ]}
              >
                Files
              </Text>
            </TouchableOpacity>
          </View>
        </Animated.View>
      )}

...
                  style={[
                    styles.iconGlass,
                    !canToggleReasoning && styles.brainButtonDisabled,
                  ]}
                >
                  <TouchableOpacity
                    testID="thinking-toggle"
                    style={[
                      styles.iconGlassInner,
                      reasoningEnabled &&
                        canToggleReasoning &&
                        styles.brainButtonActive,
                    ]}
...
                  style={[
                    styles.iconGlass,
                    webSearchTemporarilyDisabled && styles.brainButtonDisabled,
                  ]}
                >
                  <TouchableOpacity
                    testID="web-search-toggle"
                    style={[
                      styles.iconGlassInner,
                      webSearchEnabled &&
                        !webSearchTemporarilyDisabled &&
                        styles.brainButtonActive,
                    ]}
...
